Fix layout for collapsing table

--- a/scss/component/_animation.scss
+++ b/scss/component/_animation.scss
@@ -13,8 +13,17 @@
     &.in {
         display: block;
     }
-    // tr&.in    { display: table-row; }
-    // tbody&.in { display: table-row-group; }
+}
+
+tr {
+    &.collapse.in {
+        display: table-row;
+    }
+}
+tbody {
+    &.collapse.in {
+        display: table-row-group;
+    }
 }
 
 .collapsing {
